--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -10,20 +10,16 @@ go_library(
     importpath = "github.com/enfabrica/enkit/astore/server",
     visibility = ["//visibility:private"],
     deps = [
-        "//auth/common:go_default_library",
         "//astore/rpc/astore:go_default_library",
-        "//auth/proto:go_default_library",
-        "//auth/server/assets:go_default_library",  # keep
         "//astore/server/astore:go_default_library",
-        "//auth/server/auth:go_default_library",
-        "//astore/server/configs:go_default_library",  # keep
-        "//auth/server/credentials:go_default_library",  # keep
-        "//auth/server/templates",
+        "//astore/server/configs:go_default_library",
+        "//auth/server/assets:go_default_library",
+        "//auth/server/credentials:go_default_library",
+        "//auth/server/templates:go_default_library",
         "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
         "//lib/kflags/kconfig:go_default_library",
         "//lib/khttp/kassets:go_default_library",
-        "//lib/khttp/kcookie:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/oauth:go_default_library",
         "//lib/oauth/ogrpc:go_default_library",
@@ -37,57 +33,10 @@ go_library(
     ],
 )
 
-go_binary(
-    name = "server",
-    embed = [":go_default_library"],
-    visibility = ["//visibility:public"],
-)
-
-# Generate a .go file containing all the credentials supplied during the build.
-go_embed_data(
-    name = "embedded-credentials",
-    srcs = glob(["credentials/**/*.flag*"]),
-    flatten = True,
-    package = "credentials",
-    visibility = ["//visibility:public"],
-)
-
 go_library(
     name = "credentials",
     srcs = [":embedded-credentials"],
     importpath = "github.com/enfabrica/enkit/astore/server/credentials",
-    visibility = ["//visibility:public"],
-)
-
-# Generate a .go file containing all the configs supplied during the build.
-go_embed_data(
-    name = "embedded-configs",
-    srcs = glob(["configs/**/*.config*"]),
-    flatten = True,
-    package = "configs",
-    visibility = ["//visibility:public"],
-)
-
-go_library(
-    name = "configs",
-    srcs = [":embedded-configs"],
-    importpath = "github.com/enfabrica/enkit/astore/server/configs",
-    visibility = ["//visibility:public"],
-)
-
-# Generate a .go file containing all the web assets.
-go_embed_data(
-    name = "embedded-assets",
-    srcs = ["//auth/server/assets:css"] + glob(["assets/**"]),
-    flatten = True,
-    package = "assets",
-    visibility = ["//visibility:public"],
-)
-
-go_library(
-    name = "assets",
-    srcs = [":embedded-assets"],
-    importpath = "github.com/enfabrica/enkit/astore/server/assets",
     visibility = ["//visibility:public"],
 )
 
@@ -101,4 +50,10 @@ go_appengine_deploy(
     deps = [
         ":server",
     ],
+)
+
+go_binary(
+    name = "server",
+    embed = [":go_default_library"],
+    visibility = ["//visibility:public"],
 )
