--- a/machinist/cmd/BUILD.bazel
+++ b/machinist/cmd/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_cross_binary")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")
 load("//bazel/astore:defs.bzl", "astore_upload")
 
 go_library(
@@ -23,8 +23,8 @@ go_binary(
 # for prometheus to collect metrics
 go_cross_binary(
     name = "cmd_windows",
-    target = ":cmd",
     platform = "@io_bazel_rules_go//go/toolchain:windows_amd64",
+    target = ":cmd",
 )
 
 astore_upload(
