device plugin: Add internal interfaces, some plugin impl
This PR implements some of the top-level plugin logic:

* A "main" is added that looks like the main in the Nomad-provided
  skeleton example
* `PluginInfo`, `ConfigSchema`, `SetConfig`, and `Fingerprint` are
  implemented with high-level logic
* Unit tests for `Fingerprint` are added

This PR also defines interfaces for `Reserver` (how the plugin
communicates reservations) and `Notifier` (how the plugin receives
notifications that license state has changed, including from jobs on the
same node as well as jobs from other nodes). An implementation is
stubbed out for a postgres-backed table, and mocks are used for the
plugin unit tests.

Tested: unit tests added

--- a/experimental/nomad_resource_plugin/licensedevice/BUILD.bazel
+++ b/experimental/nomad_resource_plugin/licensedevice/BUILD.bazel
@@ -6,6 +6,10 @@ go_library(
     importpath = "github.com/enfabrica/enkit/experimental/nomad_resource_plugin/licensedevice",
     visibility = ["//visibility:public"],
     deps = [
+        "//experimental/nomad_resource_plugin/licensedevice/sqldb",
+        "//experimental/nomad_resource_plugin/licensedevice/types",
+        "//lib/str",
+        "@com_github_hashicorp_go_hclog//:go-hclog",
         "@com_github_hashicorp_nomad//plugins/base",
         "@com_github_hashicorp_nomad//plugins/device",
         "@com_github_hashicorp_nomad//plugins/shared/hclspec",
@@ -20,10 +24,15 @@ alias(
 
 go_test(
     name = "licensedevice_test",
-    srcs = ["plugin_test.go"],
+    srcs = [
+        "mock_test.go",
+        "plugin_test.go",
+    ],
     embed = [":licensedevice"],
     deps = [
+        "//experimental/nomad_resource_plugin/licensedevice/types",
         "@com_github_hashicorp_nomad//plugins/device",
         "@com_github_stretchr_testify//assert",
+        "@com_github_stretchr_testify//mock",
     ],
 )
