--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -27,6 +27,7 @@ load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirem
 # gazelle:go_naming_convention import_alias
 gazelle(
     name = "gazelle",
+    command = "fix",
     prefix = "github.com/enfabrica/enkit",
 )
 
