device plugin: Implement `Reserve`
This change implements the `Reserve` method in terms of the interfaces:

* calling `Reserve` will attempt to lock specific license instances in
  the DB
* upon success, the information on which license handle files to mount
  into the task are returned

---

TODO:

- [ ] create license handle files on start

--- a/experimental/nomad_resource_plugin/licensedevice/types/BUILD.bazel
+++ b/experimental/nomad_resource_plugin/licensedevice/types/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = ["types.go"],
     importpath = "github.com/enfabrica/enkit/experimental/nomad_resource_plugin/licensedevice/types",
     visibility = ["//visibility:public"],
+    deps = ["@com_github_hashicorp_nomad//plugins/device"],
 )
 
 alias(
