--- a/experimental/nomad_resource_plugin/licensedevice/BUILD.bazel
+++ b/experimental/nomad_resource_plugin/licensedevice/BUILD.bazel
@@ -35,5 +35,6 @@ go_test(
         "@com_github_hashicorp_nomad//plugins/device",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//mock",
+        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
     ],
 )
