docker: Migrate image build to `oci_*` rules
This change migrates all images built in this repo to use `rules_oci`
rules instead of `rules_docker` rules. Thankfully, all images built in
this repo today used hermetic rules, so there is an easy migration
path.

For rules that used `container_image`, there is a simple translation to
`oci_image`.

For rules that used `go_image`, there are extra transforms:

* `pkg_tar` must be used to prep the layer data. All data was put into
  `/enfabrica/bin` to avoid conflicting with top-level dirs.
* `entrypoint` (and possibly `cmd`) must be set on the resulting image
  to maintain compatibility with `go_image`.

When translating `oci_push` rules, `latest` was chosen as a remote tag
to be uniform across the repo.

Though `gcr.io` is going to be deprecated soon, the images are not moved
to a separate repository at this time.

Tested:
* `bazel test //...` still works
* Pushed a few of the images; pulled them to make sure they ran as
  expected

Jira: INFRA-9240

--- a/bestie/server/BUILD.bazel
+++ b/bestie/server/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
 
 go_library(
     name = "server_lib",
@@ -46,10 +46,10 @@ pkg_tar(
     package_dir = "/enfabrica/bin",
 )
 
-container_image(
+oci_image(
     name = "bestie_image",
-    base = "@golang_base//image",
-    cmd = [
+    base = "@container_golang_base",
+    entrypoint = [
         "/enfabrica/bin/bestie",
     ],
     tars = [
@@ -57,12 +57,9 @@ container_image(
     ],
 )
 
-container_push(
+oci_push(
     name = "bestie_image_push",
-    format = "Docker",
     image = ":bestie_image",
-    registry = "gcr.io",
-    repository = "devops-284019/infra/bestie",
-    # TODO: Change this tag to "live"
-    tag = "testing",
+    remote_tags = ["latest"],
+    repository = "gcr.io/devops-284019/infra/bestie",
 )
