--- a/bb_reporter/BUILD.bazel
+++ b/bb_reporter/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
 go_library(
@@ -29,10 +29,10 @@ pkg_tar(
     package_dir = "/enfabrica/bin",
 )
 
-container_image(
+oci_image(
     name = "bb_reporter_image",
-    base = "@golang_base//image",
-    cmd = [
+    base = "@container_golang_base",
+    entrypoint = [
         "/enfabrica/bin/bb_reporter",
     ],
     tars = [
@@ -40,11 +40,9 @@ container_image(
     ],
 )
 
-container_push(
+oci_push(
     name = "bb_reporter_image_push",
-    format = "Docker",
     image = ":bb_reporter_image",
-    registry = "gcr.io",
-    repository = "devops-284019/infra/services/bb_reporter",
-    tag = "testing",
+    remote_tags = ["latest"],
+    repository = "gcr.io/devops-284019/infra/services/bb_reporter",
 )
