--- a/infra/k8s_dummy/BUILD.bazel
+++ b/infra/k8s_dummy/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
 go_library(
@@ -27,23 +27,16 @@ pkg_tar(
     package_dir = "/enfabrica/bin",
 )
 
-container_image(
+oci_image(
     name = "k8s_dummy_image",
-    base = "@golang_base//image",
-    cmd = [
-        "/enfabrica/bin/k8s_dummy",
-    ],
-    tars = [
-        ":k8s_dummy_tar",
-    ],
+    base = "@container_golang_base",
+    entrypoint = ["/enfabrica/bin/k8s_dummy"],
+    tars = [":k8s_dummy_tar"],
 )
 
-container_push(
+oci_push(
     name = "k8s_dummy_image_push",
-    format = "Docker",
     image = ":k8s_dummy_image",
-    registry = "gcr.io",
-    repository = "devops-284019/infra/k8s_dummy",
-    # TODO: Change this tag to "live"
-    tag = "testing",
+    remote_tags = ["latest"],
+    repository = "gcr.io/devops-284019/infra/k8s_dummy",
 )
