--- a/shims/buildbuddy/cmd/BUILD.bazel
+++ b/shims/buildbuddy/cmd/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@io_bazel_rules_docker//go:image.bzl", "go_image")
-load("@io_bazel_rules_docker//container:container.bzl", "container_push")
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
+load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
 go_library(
     name = "cmd_lib",
@@ -19,19 +19,22 @@ go_binary(
     visibility = ["//visibility:public"],
 )
 
-go_image(
-    name = "bb-shim",
-    base = "@golang_base//image",
-    embed = [":cmd_lib"],
-    visibility = ["//visibility:public"],
+pkg_tar(
+    name = "tar",
+    srcs = [":cmd"],
+    package_dir = "/enfabrica/bin",
 )
 
-container_push(
-    name = "upload-shim",
-    format = "Docker",
-    image = ":bb-shim",
-    registry = "gcr.io",
-    repository = "devops-284019/infra/bb-shim",
-    tag = "latest",
-    visibility = ["//visibility:public"],
+oci_image(
+    name = "image",
+    base = "@container_golang_base",
+    entrypoint = ["/enfabrica/bin/cmd"],
+    tars = [":tar"],
+)
+
+oci_push(
+    name = "image_push",
+    image = ":image",
+    remote_tags = ["latest"],
+    repository = "gcr.io/devops-284019/infra/bb-shim",
 )
