--- a/bazel/utils/container/muk/BUILD.bazel
+++ b/bazel/utils/container/muk/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
-load("@rules_python//python:proto.bzl", "py_proto_library")
+load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
 load("@enkit_pip_deps//:requirements.bzl", "requirement")
 load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json")
 
@@ -19,11 +19,6 @@ py_binary(
 
 py_proto_library(
     name = "muk_py_proto",
-    deps = [":muk_proto"],
-)
-
-proto_library(
-    name = "muk_proto",
     srcs = ["muk.proto"],
 )
 
