--- a/infra/postsubmit/proto/BUILD.bazel
+++ b/infra/postsubmit/proto/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@rules_proto//proto:defs.bzl", "proto_library")
-load("@rules_python//python:proto.bzl", "py_proto_library")
+load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 proto_library(
@@ -11,7 +11,7 @@ proto_library(
 
 py_proto_library(
     name = "postsubmit_py_proto",
-    deps = [":postsubmit_proto"],
+    srcs = ["postsubmit.proto"],
     visibility = ["//visibility:public"],
 )
 
