--- a/allocation_manager/proto/BUILD.bazel
+++ b/allocation_manager/proto/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@rules_proto//proto:defs.bzl", "proto_library")
-load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
+load("@rules_python//python:proto.bzl", "py_proto_library")
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
@@ -28,9 +28,8 @@ go_proto_library(
 
 py_proto_library(
     name = "allocation_manager_py_proto",
-    srcs = ["allocation_manager.proto"],
     visibility = ["//visibility:public"],
-    deps = ["@com_google_protobuf//:protobuf_python"],
+    deps = [":allocation_manager_proto"],
 )
 
 # 2024-09 kjw broken! """ #error "C++ versions less than C++14 are not supported." """
