--- a/experimental/remote_asset_service/asset_downloader_test_util/BUILD.bazel
+++ b/experimental/remote_asset_service/asset_downloader_test_util/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//experimental/remote_asset_service/asset_service",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
+        "@com_github_buildbarn_bb_storage//pkg/program",
         "@com_github_google_uuid//:uuid",
         "@com_github_joho_godotenv//:godotenv",
         "@org_golang_google_protobuf//proto",
