--- a/experimental/remote_asset_service/asset_service/BUILD.bazel
+++ b/experimental/remote_asset_service/asset_service/BUILD.bazel
@@ -15,6 +15,14 @@ go_library(
     deps = [
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/asset/v1:remote_asset_go_proto",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
+        "@com_github_buildbarn_bb_storage//pkg/clock",
+        "@com_github_buildbarn_bb_storage//pkg/grpc",
+        "@com_github_buildbarn_bb_storage//pkg/jmespath",
+        "@com_github_buildbarn_bb_storage//pkg/program",
+        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc",
+        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/jmespath",
+        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/tls",
+        "@com_github_buildbarn_bb_storage//pkg/util",
         "@com_github_google_uuid//:uuid",
         "@jsonnet_go//:go_default_library",
         "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
@@ -25,6 +33,7 @@ go_library(
         "@org_golang_google_grpc//credentials/insecure",
         "@org_golang_google_grpc//metadata",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_grpc_security_advancedtls//:advancedtls",
     ],
 )
 
